框架整体更新优化：改用邮件提醒异常，提醒方式频率优化；增加重试和检查中间件

--- a/.gitignore
+++ b/.gitignore
@@ -130,5 +130,8 @@ dmypy.json
 
 .idea
 spider_logs
+_tasks
 _scripts
 .vscode
+scrapy_ddiy/spiders/_spiders/*
+!scrapy_ddiy/spiders/_spiders/__init__.py
